--- a/content/css/style.css
+++ b/content/css/style.css
@@ -1,38 +1,36 @@
+/*Global Styles*/
 body {
   margin: 0 auto;
   padding: 0;
   width: 100%;
   line-height: 1.5;
   overflow: auto;
-  background: #cb2d3e; /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #cb2d3e, #ef473a); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #cb2d3e, #ef473a); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background:#c0392b;
 }
-.navbar {
+.navigation {
   height: 100px;
   width: 100%;
   text-align: center;
-  background: #cb2d3e; /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #cb2d3e, #ef473a); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #cb2d3e, #ef473a); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background:#c0392b;
+  transition: 1s;
 }
-.navbar ul {
+.navigation ul {
   list-style: none;
   padding: 0;
   margin: 0 auto;
-  float: left;
-
+  float: right;
 }
-.navbar ul li {
+.navigation ul li {
   display: inline-block;
   padding: 35px 30px;
-  font-family: 'Josefin Slab', serif;
+  font-family: 'Raleway', sans-serif;
   color: #fff;
   cursor: pointer;
   font-size: 25px;
-  font-weight: lighter;
 }
-
+.hamburgur {
+  display: none;
+}
 .logo {
   font-family: 'Satisfy', cursive;
   display: inline-block;
@@ -42,55 +40,7 @@ body {
   font-size: 35px;
   float: left;
   font-weight: bold;
-   text-shadow: rgba(255,255,255,0.5) 0px 3px 3px;
-}
-.container {
-  width: 100%;
-  height: 640px;
-  background: url('../img/bg2.jpeg');
-  background-size: cover;
-  background-attachment: fixed;
-  }
-.search {
-  padding:  5% 0%;
-  text-align: center;
-  margin: 0 auto;
-  width: 100%;
-  background: rgba(0, 0, 0, 0.5);
-}
-  .search h1 {
-    font-family: 'Caveat', cursive;
-    text-align: center;
-    color: #fff;
-    font-size: 50px;
-    font-weight: bold;
-    text-shadow: rgba(255,255,255,0.5) 0px 1.5px 1.5px;
-    cursor: pointer;
-  }
-#searchPlaces {
-  display: block;
-  cursor: pointer;
-  font-size: 50px;
-  color: #fff;
-  text-shadow: rgba(255,255,255,0.5) 0px 2px 2px;
-  float: left;
-  padding: 0px 20px;
-}
-.search input {
-  margin: 0 auto;
-  font-family: 'Josefin Slab', serif;
-  background: rgba(255, 255, 255, 0.3);
-  border: none;
-  color: #fff;
-  font-size: 45px;
-  font-weight: lighter;
-  box-shadow: rgba(255,255,255,0.5) 0px 3px 3px;
-  float: left;
-}
-.center {
-  width: 100%;
-  text-align: center;
-  margin: 0 30%;
+  text-shadow: rgba(255,255,255,0.5) 0px 3px 3px;
 }
  hr {
   margin-top: 30px;
@@ -99,9 +49,6 @@ body {
   box-shadow: rgba(255,255,255,0.5) 0px 1px 1px;
   width: 70%;
   background: rgba(255,255,255,0.5);
-}
-.fa-compass {
-  font-size: 30px!important;
 }
 #rest {
   width: 23%;
@@ -116,11 +63,11 @@ body {
 
 #rest li {
   padding: 6px 10px;
-  font-family: 'Caveat', cursive;
+  font-family: 'Raleway', sans-serif;
   text-align: left;
   cursor: pointer;
   font-size: 25px;
-  color: #dd3a3c;
+  color: #c0392b;
 }
 #map {
   width: 100%;
@@ -129,24 +76,22 @@ body {
   z-index: 1;
   height: 600px;
 }
+
 .headings {
-  font-family: 'Caveat', cursive;
+  font-family: 'Kaushan Script', cursive;
   text-align: center;
-  color: #FFF;
   font-size: 50px;
-  font-weight: bold;
   display: block;
+  color: #fff;
   text-shadow: rgba(255,255,255,0.5) 0px 1.5px 1.5px;
   padding: 0px 10px;
+
 }
 .filters {
   float: left;
   width: 100%;
   height: auto;
-  background: #cb2d3e; /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #cb2d3e, #ef473a); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #cb2d3e, #ef473a); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-z-index: 100;
+  z-index: 100;
   position: inherit;
 }
 .filters ul {
@@ -158,15 +103,25 @@ z-index: 100;
   padding: 15px 30px;
   margin: 5px 5px;
   color: #fff;
-  font-family: 'Caveat', cursive;
+  font-family: 'Raleway', sans-serif;
   font-size: 26px;
   cursor: pointer;
   background: rgba(255,255,255,0.1);
+  border-radius: 10px;
 }
+.filters h1 {
+  color: #fff;
+}
+.fa-cutlery:before {
+    content: "\f0f8";
+    opacity: 0.8;
+    padding-right: 15px;
+}
+/*POPUP Related CSS*/
 .popup {
 width: 80%;
-height: 700px;
-background: linear-gradient(to right, rgba(203,45,62,0.9), rgba(239,71,58,0.9));
+height: 500px;
+background: rgba(250, 250, 250, 0.9);
 display: none;
 position: fixed;
 top:10%;
@@ -175,38 +130,98 @@ z-index: 1000;
 padding: 10px;
 border: 2px solid #fff;
 }
-.navig {
-  width: 50%;
-  left: 22%;
-  margin: 0 auto;
-  color: #FFF;
-  text-align: center;
-  cursor:pointer;
-  font-family: 'Josefin Slab', serif;
-  font-size: 56px;
-  position: fixed;
-  top: 35%;
-  border: 2px solid #fff;
-}
 .popup hr {
   position: absolute;
   top: 55%;
   left: 12%;
 }
 .close {
-  float: right;
-  color: #FFF;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  clear: both;
+  color: #E03C3B;
   font-size: 40px;
   cursor: pointer;
+  width: 100%;
+  text-align: right;
+}
+.popup-body {
+  width: 100%;
+  height: auto;
+  position: absolute;
+  top: 10%;
+  text-align: center;
+  font-family: 'Raleway', sans-serif;
+  color: #A2A2A2;
+}
+.popup-body h1 {
+  font-family: 'Raleway', sans-serif;
+  color: #c0392b;
+  font-size: 40px;
+  font-weight: bolder;
+}
+.popup-body h3 {
+  font-family: 'Raleway', sans-serif;
+  color: #A2A2A2;
+  opacity: 0.5;
+  font-size: 26px
+}
+
+/*Search POPUP*/
+.bubble {
+  background:#c0392b;
+  border-radius: 50%;
+  font-size: 100px;
+  width: 14%;
+  position: absolute;
+  left: 42%;
+  top: 10%;
+  color: #fff;
+}
+#getCity {
+  width: 50%;
+  height: 40px;
+}
+#searchPlaces {
+  width: 58px;
+  height: 46px;
+  background:#c0392b;
+  color: #fff;
+  font-size: 42px;
+  text-align: center;
+  vertical-align: top;
+  cursor: pointer;
+}
+.full {
+  width: 100%;
+  height: 200px;
+}
+.popup-body h1 {
+
+}
+/*Distance Bubble*/
+.navig {
+  width: 50%;
+  left: 22%;
+  margin: 0 auto;
+  color: #c0392b;
+  text-align: center;
+  cursor:pointer;
+  font-family: 'Raleway', sans-serif;
+  font-size: 56px;
+  position: fixed;
+  top: 35%;
+  border: 2px solid #fff;
 }
 .plan{
   width: 50%;
   left: 22%;
   margin: 0 auto;
-  color: #FFF;
+  color: #c0392b;
   text-align: center;
   cursor:pointer;
-  font-family: 'Josefin Slab', serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 56px;
   position: fixed;
   top: 65%;
@@ -218,7 +233,7 @@ border: 2px solid #fff;
   float: left;
 }
 .results li {
-font-family: 'Josefin Slab', serif;
+font-family: 'Raleway', sans-serif;
 font-size: 32px;
 font-weight: bolder;
 cursor: pointer;
@@ -226,6 +241,7 @@ padding: 5px 10px;
 color: #fff;
 }
 .foods {
+  margin-top: 6%;
   background: url('../img/22.jpeg');
   width: 50%;
   float: right;
@@ -234,17 +250,27 @@ color: #fff;
   background-size: cover;
   display: none;
 }
+.mobile {
+  display: none;
+}
+/*Search POPUP*/
 
   @media only screen and (max-width:500px)  {
   /* smartphones, portrait iPhone, portrait 480x320 phones (Android) */
 body {
   width: 100%;
+  font-family: 'Raleway', sans-serif;
 }
-.navbar {
-  height: 50px;
+.navigation {
+  height: 70px;
   text-align: center;
+  overflow: hidden;
   position: fixed;
+  top: 0;
+  z-index: 10;
+  box-shadow: 2px 15px 66px 5px rgba(0,0,0,0.22););
 }
+
 .logo {
   padding: 5px 10px;
   font-size: 25px;
@@ -252,30 +278,21 @@ body {
   font-weight: bold;
   margin: 0 auto;
   float: none;
+  position: relative;
+  top: 15px;
 }
-.container {
-  height: auto;
-}
-  .search {
-      padding:  25% 0%;
-      text-align: center;
-      margin: 0 auto;
-      width: 100%;
-      background: rgba(0, 0, 0, 0.5);
-    }
-    .search h1 {
-      font-size: 30px;
-    }
+
     #rest {
       width: 100%;
       margin: 0 auto;
       padding: 0;
       position: static;
-      background: linear-gradient(to right, rgba(203,45,62,0.7), rgba(239,71,58,0.7)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+      /*background: linear-gradient(to right, rgba(203,45,62,0.7), rgba(239,71,58,0.7)); */
+      background: url("../img/bg3.jpeg") !important;
       }
       #rest h1 {
         padding: 10px 0px;
-        font-family: 'Satisfy', cursive;
+        font-family: 'Raleway', sans-serif !important;
         text-shadow: rgba(255,255,255,0.5) 0px 1.5px 1.5px;
         text-align: center;
         font-size: 20px;
@@ -283,45 +300,31 @@ body {
       }
     #rest li {
       padding: 10px 0px;
-      font-family: 'Caveat', cursive;
+      font-family: 'Raleway', sans-serif;
       text-shadow: rgba(255,255,255,0.5) 0px 1.5px 1.5px;
       text-align: center;
       cursor: pointer;
       font-size: 25px;
       color: #fff;
+      background: rgba(0,0,0, 0.6);
     }
+.wrapper {
+  height: 40px;
+  background:#c0392b;
+  margin: 0 auto;
+  margin-top: 100px;
+}
     hr {
      margin-top: 0px;
      padding: 0;
      }
     .headings {
       font-size: 30px;
+      color: #fff;
     }
-  #searchPlaces {
-    float: none;
-    padding: 0;
-    margin-top: 5%;
-    font-size: 20px;
-  }
-  .search input {
-    margin: 0 auto;
-    font-size: 25px;
-    float: none;
-    padding: 0;
-  }
-  .center {
-    width: 100%;
-    text-align: center;
-    margin: 0 auto;
-  }
-  .fa-compass {
-    font-size: 20px!important;
-  }
-
     #map {
       display: none;
   }
-
   .filters {
     width: 100%;
     z-index: 0;
@@ -335,15 +338,17 @@ body {
     padding: 0;
   }
   .filters ul li {
-    display: inline-block;
     margin: 5px 5px;
-    font-size: 20px;
+    display: inline-block;
+    font-size: 18px;
     padding: 7px;
     border-radius: 5px;
+    font-family: 'Raleway', sans-serif;
   }
   .results {
     width: 90%;
     margin: 0 auto;
+    margin-bottom: 120px;
   }
 .results  li{
   display: block;
@@ -353,34 +358,109 @@ body {
   text-align: left;
   padding: 7px;
   font-size: 20px;
-  font-family: 'Josefin Slab', serif;
+  font-family: 'Raleway', sans-serif;
   font-weight: bolder;
   margin-left: 20px;
 }
+.fa-cutlery:before {
+    content: "\f0f8";
+    opacity: 0.8;
+    padding-right: 15px;
+}
 .popup {
-  width: 80%;
-  height: 400px;
-  background: linear-gradient(to right, rgba(203,45,62,0.9), rgba(239,71,58,0.9));
-  display: none;
-  position: fixed;
-  top:20%;
-  left: 5%;
-  z-index: 1000;
-  padding: 10px;
-  border: 2px solid #fff;
+width: 75%;
+height: 400px;
+background: rgba(250, 250, 250, 0.9);
+display: none;
+top:10%;
+z-index: 1000;
+border: 2px solid #fff;
+border-radius: 10px;
+}
+.popup hr {
+  position: absolute;
+  top: 55%;
+  left: 12%;
+}
+.close {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  clear: both;
+  color: #E03C3B;
+  font-size: 40px;
+  cursor: pointer;
+  width: 100%;
+  text-align: right;
+}
+.popup-body {
+  width: 100%;
+  height: auto;
+  position: absolute;
+  top: 10%;
+  text-align: center;
+  font-family: 'Raleway', sans-serif !important;
+  color: #A2A2A2;
+}
+.popup-body h1 {
+  font-family: 'Raleway', sans-serif !important;
+  color: #c0392b;
+  font-size: 20px;
+  font-weight: bolder;
+}
+.popup-body p {
+  font-family: 'Raleway', sans-serif !important;
+  color: #A2A2A2;
+  opacity: 0.5;
+  font-size: 18px;
+  margin-top: 40px;
+  overflow: hidden;
 }
 .navig {
   width: 50%;
   left: 22%;
   margin: 0 auto;
-  color: #FFF;
+  color: #c0392b;
   text-align: center;
   cursor:pointer;
-  font-family: 'Josefin Slab', serif;
+  font-family: 'Raleway', sans-serif !important;
   font-size: 26px;
   position: fixed;
   top: 35%;
-  border: 2px solid #fff;
+  border: 2px solid #c0392b;
+  border-radius: 10px;
+
+}
+.bubble {
+  border-radius: 50%;
+  font-size: 40px;
+  width: 22%;
+  position: absolute;
+  left: 37%;
+  color: #fff;
+}
+#getCity {
+  width: 80%;
+  height: 40px;
+  position: absolute;
+  top: 10%;
+  left: 10%;
+  background: none;
+  font-family: 'Raleway', sans-serif !important;
+  font-size: 20px;
+  color: #fff;
+  border: 0;
+}
+#getCity:focus {
+  box-shadow: 2px 15px 66px 5px rgba(0,0,0,0.22););
+  border: none;
+}
+.full {
+  width: 100%;
+  height: 100px;
+}
+.popup-body h1 {
+
 }
 .popup hr {
   position: absolute;
@@ -389,7 +469,7 @@ body {
 }
 .close {
   float: right;
-  color: #FFF;
+  color: #c0392b;
   font-size: 30px;
   cursor: pointer;
 }
@@ -397,19 +477,99 @@ body {
   width: 50%;
   left: 22%;
   margin: 0 auto;
-  color: #FFF;
+  color: #c0392b;
   text-align: center;
   cursor:pointer;
-  font-family: 'Josefin Slab', serif;
+  font-family: 'Raleway', sans-serif !important;
   font-size: 26px;
   position: fixed;
   top: 65%;
-  border: 2px solid #fff;
+  border: 2px solid #c0392b;
+  border-radius: 10px;
 }
 .foods {
   display: none;
 }
- }
+.locationName {
+  text-align: center;
+  font-size: 25px !important;
+  margin-left: -20px;
+}
+.mobile {
+  height: 10%;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  background: #c0392b;
+  text-align: center;
+  box-shadow: 2px -15px 66px -5px rgba(0,0,0,0.44);
+  margin-top: 100px;
+}
+.mobile i {
+  color: #fff;
+  font-size: 30px;
+  padding: 4% 10%;
+  text-shadow: 1px 2px 6px #000000;
+}
+ input {
+  color:  #c0392b;
+  width: 70%;
+  height: 25px;
+  border-radius: 5px;
+  font-family: 'Raleway';
+  margin: 10px auto;
+  border: 0;
+  transition: border 0.1s linear;
+  text-align: center;
+}
+ input:focus {
+  transition: 0.1s linear;
+  outline: 0;
+  border-bottom: 3px solid #c0392b;
+  transition-timing-function: ease-in-out;
+}
+ button {
+  background: #c0392b;
+  font-family: 'Raleway';
+  color: #fff;
+  border-radius: 5px;
+  width: 40%;
+  height: 30px;
+}
+button:disabled {
+  opacity: 0.8;
+}
+.placeholder {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 400px;
+  background: red;
+}
+input[type="radio"] {
+width: 20px;
+height: 20px;
+}
+.containment i{
+  font-size: 30px;
+  padding: 10px;
+  color:  #c0392b;
+}
+.popup {
+  height: 500px;
+  width: 70%;
+  background: rgba(250, 250, 250, 0.9);
+  position: absolute;
+  top:10%;
+  z-index: 1000;
+  border: 2px solid #fff;
+  border-radius: 10px;
+}
+}
+
   /*@media (min-width:480px)  { /* smartphones, Android phones, landscape iPhone */ }*/
   /*@media (min-width:600px)  { /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */ }*/
   /*@media (min-width:801px)  { /* tablet, landscape iPad, lo-res laptops ands desktops */ }*/
