--- a/content/css/style.css
+++ b/content/css/style.css
@@ -123,7 +123,7 @@ width: 80%;
 height: 500px;
 background: rgba(250, 250, 250, 0.9);
 display: none;
-position: fixed;
+position: fixed !important;
 top:10%;
 left: 10%;
 z-index: 1000;
